<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        style="@style/recipes_card_view">
        <TextView
            android:id="@+id/tv_step_name"
            style="@style/value_text_view"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_exo_player"
        style="@style/recipes_card_view">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/baked_exo_player"
                style="@style/bakeit_media"/>
            <ImageView
                android:id="@+id/iv_step"
                android:layout_width="match_parent"
                style="@style/bakeit_media"/>
        </FrameLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/recipes_card_view">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_step_instructions"
                style="@style/value_text_view"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/button_prev"
                    android:text="@string/prev"
                    style="@style/bakeit_button"/>
                <Button
                    android:id="@+id/button_next"
                    android:text="@string/next"
                    style="@style/bakeit_button"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
</ScrollView>