...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/cardviewTextBg">
            <TextView
                android:id="@+id/tv_recipe_name"
                style="@style/cardview_heading_text_view"
                android:paddingBottom="0dp"/>
            <TextView
                android:id="@+id/tv_recipe_details"
                style="@style/cardview_value_text_view"
                android:paddingTop="0dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <ScrollView
...
