<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_step"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageView
        android:contentDescription="@string/step_description"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:src="@android:drawable/ic_media_play"
        android:layout_gravity="center_vertical"/>
    <TextView
        android:id="@+id/tv_step"
        style="@style/value_text_view"
        android:paddingTop="@dimen/half_vertical_padding"
        android:paddingBottom="@dimen/half_vertical_padding"
        android:layout_gravity="center_vertical"/>
</LinearLayout>